# cmake-skeleton

./: .gitignore  CMakeLists.txt  README.rst
CMake/Modules/: Action_InstallOGRE.cmake  Define_CMakeDefaults.cmake  Define_CompilerFlags.cmake  Macro_AddSources.cmake  Macro_EnsureOutOfSourceBuild.cmake  Setup_OGRE.cmake
src/: CMakeLists.txt
src/subdir/: CMakeLists.txt
